# Grokking-in-Action

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json  requirements.txt  run_experiment.py  run_suite.py  test.py
configs/: mod_add_baseline.json  mod_add_grokking.json  perm_s5_baseline.json  perm_s5_grokking.json
scripts/: run_paper_suite.sh
src/grokking/: __init__.py  config.py  experiment.py  model.py  optimizer.py  sweeps.py  tasks.py
tests/: test_experiment.py  test_tasks.py
