[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grokking-framework"
version = "0.1.0"
description = "Config-driven framework to reproduce grokking experiments"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=2.0,<3.0",
  "matplotlib>=3.8,<4.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
